--- a/E/Epic/EpicPass_Template_15/ads/300x600/300x600.html
+++ b/E/Epic/EpicPass_Template_15/ads/300x600/300x600.html
@@ -51,7 +51,7 @@
     <style media="screen" data-dynamic="style">
       #ad {
         width: 300px;
-        height: 250px;
+        height: 600px;
         font-family: brandon-grotesque,Helvetica,sans-serif;
         font-weight: 900;
         background-color: #20285e;
@@ -107,7 +107,7 @@
       <div id="cta" dir="auto" class="text"
         data-text="ctaText"
         data-style="text-align:center;"
-        style="top: 209px;
+        style="top: 534px;
           left: 100px;
           width: 100px;
           height: 26px;
@@ -129,20 +129,20 @@
       var ad = new Ad({
         root: document.querySelector('#ad'),
         width: 300,
-        height: 250,
+        height: 600,
         borderWidth: 1,
         borderColor: '#000'
       });
       setTimeout(function() {
         ad.contentSetup({
           cam: {
-            introLogoImage: 'assets/300x250_Epic_Logo.png',
-            frameVideo2: 'assets/300x250_BR_Cohen.mp4',
-            logoImage: 'assets/300x250_Northeast_Orange.png',
-            frameText2: "<div style='top:95px;left:10px;width:280px;font-size:24px;letter-spacing:3px;text-align:center;color:#f8951f;'>PASS PRICES<div style='color:#fff;'>REDUCED 20%</div></div>",
-            frameVideo3: 'assets/300x250_BR_Dodds.mp4',
-            frameText3: "<div style='top:83px;left:10px;width:280px;font-size:33px;letter-spacing:3px;text-align:center;color:#b8bbd4;font-weight:400'>WAS&nbsp;<strike>$599</strike><div style='color:#fff;font-weight:900;'>NOW $479</div></div>",
-            frameText4: "<div style='top:95px;left:10px;width:280px;font-size:24px;letter-spacing:3px;text-align:center;color:#f8951f;'>LAST CHANCE FOR<div style='color:#fff;'>THE LOWEST PRICE</div><div style='color:#fff;font-size:15px;'>XXXX</div></div>",
+            introLogoImage: 'assets/300x600_Epic_Logo.png',
+            logoImage: 'assets/300x600_Local_Pass_Orange.png',
+            frameVideo2: 'assets/300x600_VL_Cohen.mp4',
+            frameText2: "<div style='top: 189px;left: 50px;width: 200px;font-size: 30px;letter-spacing: 0.15em;line-height: 1.65;text-align:center;color:#f8951f;'>PASS PRICES<div style='color:#fff;'>REDUCED 20%</div></div>",
+            frameVideo3: 'assets/300x600_WB_O_Neill.mp4',
+            frameText3: "<div style='top: 239px;left:10px;width:280px;font-size: 38px;letter-spacing: 0.15em;line-height: 1.65;text-align:center;color:#b8bbd4;font-weight:400;'>WAS&nbsp;<strike>$729</strike><div style='color:#fff;font-weight:900;'> NOW $583</div></div>",
+            frameText4: "<div style='top: 194px;left:10px;width:280px;font-size: 30px;letter-spacing: 0.15em;line-height: 1.65;text-align:center;color:#f8951f;'> LAST CHANCE<div style='color:#fff;'>FOR THE LOWEST PRICE</div><div style='color:#fff;font-size: 16px;margin-top: 9px;'>XXXX</div></div>",
             ctaText: 'BUY NOW',
             ctaBtnColor: '#f8951f^#fc8901',
             clickURL: 'https://www.adobe.com/#EpicPass'
@@ -269,7 +269,6 @@
           }
           textUpdate();
           gsap.set('#cta, #frameVideo2, #logoImage, #frameText2, #frameVideo3, #frameText3, #frameText4', {autoAlpha:0});
-          gsap.set('#introLogoImage', {css: {transformOrigin: '128px 100px'}});
           gsap.set('#logoImage, #cta', {y: 20});
           gsap.set('#frameText2 v, #frameText3 v, #frameText4 v', {y: '100%'});
           var animateFrame4 = function() {
@@ -298,8 +297,8 @@
             .to('#frameVideo2', {autoAlpha: 0, delay: 2, onComplete: (adData.frameText3.toLowerCase() != 'na' ? animateFrame3 : animateFrame4)})
           }
           gsap.timeline({defaults:{ease: "power2.Out", duration:0.3}})
-          .to('#introLogoImage', {x:70, scale: 5, ease: 'Power2.easeIn', duration:1, delay: 1})
-          .to('#introLogoImage', {x:100, scale: 7, autoAlpha: 0, duration:0.2, onComplete: animateFrame2},'-=0.1');
+          .to('#introLogoImage', {scale: 5, ease: 'Power2.easeIn', duration:1, delay: 1})
+          .to('#introLogoImage', {scale: 7, autoAlpha: 0, duration:0.2, onComplete: animateFrame2},'-=0.1');
         });
       }, 1000);
     </script>
