Fixed font issue

--- a/E/Epic/EpicPass_Template_15/ads/728x90/728x90.html
+++ b/E/Epic/EpicPass_Template_15/ads/728x90/728x90.html
@@ -112,7 +112,7 @@
           width: 107px;
           height: 26px;
           font-size: 14px;
-          font-weight: 700;
+          font-weight: 900;
           letter-spacing: 0.1em;
           color: #001e62;
           border-top-left-radius: 20px;
@@ -278,14 +278,14 @@
             changeImage(ad.root.querySelector('#logoImage img'), 'default');
             gsap.timeline({defaults:{ease: "power2.Out", duration:0.3}})
             .to('#frameVideo3', {autoAlpha: 0.1, duration: 0})
-            .to('#frameText4, #frameText4 v, #logoImage', {x:0, y:0, autoAlpha: 1, duration: 0.5, onComplete: removeTypingContent, onCompleteParams: [ad.root.querySelector('#frameText4')]})
+            .to('#frameText4, #frameText4 v', {x:0, y:0, autoAlpha: 1, duration: 0.5, onComplete: removeTypingContent, onCompleteParams: [ad.root.querySelector('#frameText4')]})
           }
           var animateFrame3 = function() {
             changeImage(ad.root.querySelector('#logoImage img'), 'default');
             gsap.timeline({defaults:{ease: "power2.Out", duration:0.3}})
             .to('#frameVideo3', {autoAlpha: 0.1, duration: 0})
-            .to('#frameText3, #frameText3 v, #logoImage', {x:0, y:0, autoAlpha: 1, duration: 0.5, onComplete: removeTypingContent, onCompleteParams: [ad.root.querySelector('#frameText3')]})
-            .to('#frameText3, #logoImage', {autoAlpha: 0, delay: 2, duration: 0.2})
+            .to('#frameText3, #frameText3 v', {x:0, y:0, autoAlpha: 1, duration: 0.5, onComplete: removeTypingContent, onCompleteParams: [ad.root.querySelector('#frameText3')]})
+            .to('#frameText3', {autoAlpha: 0, delay: 2, duration: 0.2, onComplete: changeImage, onCompleteParams:[ad.root.querySelector('#logoImage img')]})
             .to('#frameVideo3', {autoAlpha: 1, duration: 0.1, onStart:playVideo, onStartParams: [ad.root.querySelector('#frameVideo3 video')]})
             .to('#frameVideo3', {autoAlpha: 0, delay: 2, onComplete: animateFrame4})
           }
@@ -295,7 +295,7 @@
             .to('#logoImage', {x:0, y:0, autoAlpha: 1})
             .to('#frameText2, #frameText2 v', {x:0, y:0, autoAlpha: 1, duration: 0.5, onComplete: removeTypingContent, onCompleteParams: [ad.root.querySelector('#frameText2')]})
             .to('#cta', {x:0, y:0, autoAlpha: 1})
-            .to('#frameText2, #logoImage', {autoAlpha: 0, delay: 1.5, duration: 0.2})
+            .to('#frameText2', {autoAlpha: 0, delay: 1.5, duration: 0.2, onComplete: changeImage, onCompleteParams:[ad.root.querySelector('#logoImage img')]})
             .to('#frameVideo2', {autoAlpha: 1, duration: 0.1, onStart:playVideo, onStartParams: [ad.root.querySelector('#frameVideo2 video')]})
             .to('#frameVideo2', {autoAlpha: 0, delay: 2, onComplete: (adData.frameText3.toLowerCase() != 'na' ? animateFrame3 : animateFrame4)})
           }
