--- a/E/Epic/EpicPass_Template_15/ads/300x600/300x600.html
+++ b/E/Epic/EpicPass_Template_15/ads/300x600/300x600.html
@@ -89,6 +89,13 @@
       }
       .blue { color: #20285e; }
       .orange { color: #f8951f; }
+      #cta {
+        background-position: -130px 0;
+        overflow: hidden;
+        -webkit-transition:opacity 0.7s ease-out 2s;
+        transition:opacity 0.7s ease-out 2s;
+        background-color: !{ctaBtn};
+      }
       #cta::after{
         content:'';
         position: absolute;
