--- a/M/Microsoft/MicrosoftAzure/Base_Template_V4/ads/160x600/Base/Template_V4_Illustration_160x600.htm
+++ b/M/Microsoft/MicrosoftAzure/Base_Template_V4/ads/160x600/Base/Template_V4_Illustration_160x600.htm
@@ -75,6 +75,7 @@ function handleComplete(evt,comp) {
 				var bannerData = parentWindow.getBannerData();
 				bannerData.headline1 = eval(bannerData.textField1);
 				bannerData.CTA = eval(bannerData.ctaText);
+		bannerData.CTA[0] = bannerData.CTA[0].split('<br>').join('\n');
 				bannerData.CTAarrowVisible = eval(bannerData.CTAarrowVisible);
 				// bannerData.CTA = bannerData.ctaText ? ['<#FFFFFF>' + bannerData.ctaText,(bannerData.ctaText.length >= 15 ? "9px" : "12px"),0,0,"50","300", "center"] : '';
 				var mainHit = document.getElementById("hit");
