--- a/E/Epic/Vail_Resort_Template(T13)_Dynamic FooterLogo/ads/970x250/Heavenly/970x250_Heavenly.htm
+++ b/E/Epic/Vail_Resort_Template(T13)_Dynamic FooterLogo/ads/970x250/Heavenly/970x250_Heavenly.htm
@@ -22,7 +22,7 @@
         font-family: arial,sans-serif;
         font-weight: 900;
         font-style: normal;
-        color: #000;
+        color: #E4002B;
         background-color: #fff;
       }
       .frame {
