--- a/E/Epic/Vail_Resort_Template(T13)_Dynamic FooterLogo/ads/160x600/Breckenridge/160x600_Breckenridge.htm
+++ b/E/Epic/Vail_Resort_Template(T13)_Dynamic FooterLogo/ads/160x600/Breckenridge/160x600_Breckenridge.htm
@@ -48,7 +48,7 @@
       <div id="backgroundImage3" class="asset frame multiframe" data-image="backgroundImage3"></div>
       <div id="topWhitePatch" class="frame" style="top:-556px;background-color:rgba(0, 76, 128, 0.85);"></div>
       <div id="bottomWhitePatch" class="frame" style="top:453px;background-color:rgba(0, 76, 128, 0.9);"></div>
-      <!-- <div id="productLableLogoBg" class="asset frame" data-image="productLableLogoBg"></div> -->
+      <div id="productLableLogoBg" class="asset frame" data-image="productLableLogoBg"></div>
       <div id="logoImage" class="asset frame" data-image="logoImage"></div>
       <div id="productLableLogo" class="asset frame" data-image="productLableLogo" style="display:none;"></div>
       <!-- <div id="ref" class="asset frame" data-image="ref"></div> -->
