--- a/E/Epic/Vail_Resort_Template(T10)_Dynamic FooterLogo/ads/970x250/EpicMountainRewards/970x250_EpicMountainRewards.htm
+++ b/E/Epic/Vail_Resort_Template(T10)_Dynamic FooterLogo/ads/970x250/EpicMountainRewards/970x250_EpicMountainRewards.htm
@@ -23,7 +23,7 @@
         font-family: arial,sans-serif;
         font-weight: 900;
         font-style: normal;
-        color: #99bbd5;
+        color: #fff;
         background-color: #fff;
       }
       .frame {
