--- a/H/Hilton/Hilton_New_2020_Template/ads/160x600/160x600.html
+++ b/H/Hilton/Hilton_New_2020_Template/ads/160x600/160x600.html
@@ -382,6 +382,7 @@
 
                     document.querySelector("#ad").style.fontFamily = "RuiAbreuUsual";
                     document.querySelector("#cta").style.fontFamily = "TypeTogetherBreeSerifSb";
+                    whitePatchColor = '#55565a';
                   }else if(hamptonCodes.indexOf(matchingCodes[matchIndex]) != -1){
                     logoImageName = 'hampton';
                     document.querySelector("#logoImage").style.top = '389px';
