--- a/H/Hilton/Hilton_New_2020_Template/ads/728x90/728x90.html
+++ b/H/Hilton/Hilton_New_2020_Template/ads/728x90/728x90.html
@@ -391,6 +391,7 @@
                     for (var i = 0; i < frameText.length; i++){
                       frameText[i].style.lineHeight = "1";
                     }*/
+                    whitePatchColor = '#55565a';
                   }else if(hamptonCodes.indexOf(matchingCodes[matchIndex]) != -1){
                     logoImageName = 'hampton';
                     document.querySelector("#logoImage").style.width = '75px';
