--- a/H/Hilton/Hilton_New_2020_Template/ads/300x250/300x250.html
+++ b/H/Hilton/Hilton_New_2020_Template/ads/300x250/300x250.html
@@ -395,6 +395,7 @@
 
                     document.querySelector("#ad").style.fontFamily = "RuiAbreuUsual";
                     document.querySelector("#cta").style.fontFamily = "TypeTogetherBreeSerifSb";
+                    whitePatchColor = '#55565a';
                   }else if(hamptonCodes.indexOf(matchingCodes[matchIndex]) != -1){
                     logoImageName = 'hampton';
                     document.querySelector("#logoImage").style.height = '93px';
