NBA and TD Bank Spreadsheet API Update

--- a/T/TD Bank/Text Template/ads.html
+++ b/T/TD Bank/Text Template/ads.html
@@ -165,7 +165,7 @@
               frameText3: data.frameText3,
               ctaText: data.CTA,
               disclaimerText: data.disclaimer,
-              clickURL: data.clickURL,
+              clickURL: data.URL,
             }`,
           }
           eval(templates[data['template']]);
