--- a/T/TD Bank/Image Template/ads.html
+++ b/T/TD Bank/Image Template/ads.html
@@ -165,7 +165,7 @@
               frameText3: data.frameText3,
               ctaText: data.CTA,
               disclaimer: data.disclaimer,
-              clickURL: data.clickURL,
+              clickURL: data.URL,
             }`,
           }
           eval(templates[data['template']]);
