--- a/E/Epic/EpicPass_Whistler/ads.html
+++ b/E/Epic/EpicPass_Whistler/ads.html
@@ -159,13 +159,13 @@
       var getCAMData = function(data) {
           var templates = {
             'Simplified': `var cam = {
-              backgroundImage1: '../../assets/'+data.backgroundImage1,
-              backgroundImage2: '../../assets/'+data.backgroundImage2,
-              frameText1: data.frameText1,
-              frameText2: data.frameText2,
-              frameText3: data.frameText3,
+              backgroundImage1: '../../assets/'+data.BackgroundImage1,
+              backgroundImage2: '../../assets/'+data.BackgroundImage2,
+              frameText1: data.FrameText1,
+              frameText2: data.FrameText2,
+              frameText3: data.FrameText3,
               ctaText: data.CTA,
-              clickURL: data.clickURL,
+              clickURL: data.URL,
             }`,
           }
           eval(templates[data['template']]);
@@ -225,7 +225,7 @@
         }
         document.querySelector('#subsubheader').innerHTML = htmlContent;
         htmlContent = '';
-        htmlContent = adContent.data[0].Layout + ' | ' + adContent.data[0].Resort + ' | ' + filterString.split('|').join(' | ');
+        htmlContent = adContent.data[0].Layout + ' | ' + adContent.data[0]['Resort Code'] + ' | ' + filterString.split('|').join(' | ');
         document.querySelector('#title').innerHTML = htmlContent;
         var headers = document.querySelectorAll('#header > div');
         for(var i = 0; i < headers.length; i++) {
