--- a/M/Microsoft/Microsoft_Office_Verde_Creative_Retargeting/ads.html
+++ b/M/Microsoft/Microsoft_Office_Verde_Creative_Retargeting/ads.html
@@ -227,7 +227,7 @@
         }
         document.querySelector('#subsubheader').innerHTML = htmlContent;
         htmlContent = '';
-        htmlContent = 'Prospecting Template - ' + adContent.data[0].Country + ' | ' + adContent.data[0].Layout + ' | ' + filterString.split('|').join(' | ');
+        htmlContent = 'Retargeting Template - ' + adContent.data[0].Country + ' | ' + adContent.data[0].Layout + ' | ' + filterString.split('|').join(' | ');
         document.querySelector('#title').innerHTML = htmlContent;
         var headers = document.querySelectorAll('#header > div');
         for(var i = 0; i < headers.length; i++) {
