--- a/H/Hilton/Hilton_New_2020_Template/ads/160x600/160x600.html
+++ b/H/Hilton/Hilton_New_2020_Template/ads/160x600/160x600.html
@@ -319,6 +319,7 @@
               } catch (e) {}
               var hiltonCodes = splitCodes("HI,HH");
               var hiltonHotelResortCodes = splitCodes("HHR");
+              var signiaHiltonOrlandoCodes = splitCodes("ORLHHHH");
               var waldorfCodes = splitCodes("WA");
               var embassyCodes = splitCodes("ES");
               var doubleTreeCodes = splitCodes("DT");
@@ -352,9 +353,14 @@
                     document.querySelector("#ad").style.fontFamily = "LoewBlack";
                   }else if(hiltonHotelResortCodes.indexOf(matchingCodes[matchIndex]) != -1){
                     logoImageName = 'hhr';
-                    document.querySelector("#logoImage").style.top = '400px';
+                    document.querySelector("#logoImage").style.top = '381px';
 
                     document.querySelector("#ad").style.fontFamily = "LoewBlack";
+                  }else if(signiaHiltonOrlandoCodes.indexOf(matchingCodes[matchIndex]) != -1){
+                    logoImageName = 'orlhhhh';
+                    document.querySelector("#logoImage").style.top = '400px';
+
+                    document.querySelector("#ad").style.fontFamily = "LoewBlack";  
                   }else if(waldorfCodes.indexOf(matchingCodes[matchIndex]) != -1){
                     logoImageName = 'waldorf';
 
