--- a/H/Hilton/Hilton_New_2020_Template/ads/300x250/300x250.html
+++ b/H/Hilton/Hilton_New_2020_Template/ads/300x250/300x250.html
@@ -318,6 +318,7 @@
               } catch (e) {}
               var hiltonCodes = splitCodes("HI,HH");
               var hiltonHotelResortCodes = splitCodes("HHR");
+              var signiaHiltonOrlandoCodes = splitCodes("ORLHHHH");
               var waldorfCodes = splitCodes("WA");
               var embassyCodes = splitCodes("ES");
               var doubleTreeCodes = splitCodes("DT");
@@ -352,6 +353,13 @@
                     document.querySelector("#ad").style.fontFamily = "LoewBlack";
                   }else if(hiltonHotelResortCodes.indexOf(matchingCodes[matchIndex]) != -1){
                     logoImageName = 'hhr';
+                    document.querySelector("#logoImage").style.top = '177px';
+                    document.querySelector("#logoImage").style.left = '35px';
+                    document.querySelector("#logoImage").style.height = '65px';
+
+                    document.querySelector("#ad").style.fontFamily = "LoewBlack";
+                  }else if(signiaHiltonOrlandoCodes.indexOf(matchingCodes[matchIndex]) != -1){
+                    logoImageName = 'orlhhhh';
                     document.querySelector("#logoImage").style.top = '177px';
                     document.querySelector("#logoImage").style.left = '35px';
                     document.querySelector("#logoImage").style.height = '65px';
