--- a/H/Hilton/Hilton_New_2020_Template/ads/160x600/160x600.html
+++ b/H/Hilton/Hilton_New_2020_Template/ads/160x600/160x600.html
@@ -319,7 +319,7 @@
               } catch (e) {}
               var hiltonCodes = splitCodes("HI,HH");
               var hiltonHotelResortCodes = splitCodes("HHR");
-              var signiaHiltonOrlandoCodes = splitCodes("ORLHHHH");
+              var signiaHiltonOrlandoCodes = splitCodes("SH");
               var waldorfCodes = splitCodes("WA");
               var embassyCodes = splitCodes("ES");
               var doubleTreeCodes = splitCodes("DT");
@@ -357,7 +357,7 @@
 
                     document.querySelector("#ad").style.fontFamily = "LoewBlack";
                   }else if(signiaHiltonOrlandoCodes.indexOf(matchingCodes[matchIndex]) != -1){
-                    logoImageName = 'orlhhhh';
+                    logoImageName = 'sh';
                     document.querySelector("#logoImage").style.top = '400px';
 
                     document.querySelector("#ad").style.fontFamily = "LoewBlack";  
