--- a/H/Hilton/Hilton_New_2020_Template/ads/300x250/300x250.html
+++ b/H/Hilton/Hilton_New_2020_Template/ads/300x250/300x250.html
@@ -318,7 +318,7 @@
               } catch (e) {}
               var hiltonCodes = splitCodes("HI,HH");
               var hiltonHotelResortCodes = splitCodes("HHR");
-              var signiaHiltonOrlandoCodes = splitCodes("ORLHHHH");
+              var signiaHiltonOrlandoCodes = splitCodes("SH");
               var waldorfCodes = splitCodes("WA");
               var embassyCodes = splitCodes("ES");
               var doubleTreeCodes = splitCodes("DT");
@@ -359,7 +359,7 @@
 
                     document.querySelector("#ad").style.fontFamily = "LoewBlack";
                   }else if(signiaHiltonOrlandoCodes.indexOf(matchingCodes[matchIndex]) != -1){
-                    logoImageName = 'orlhhhh';
+                    logoImageName = 'sh';
                     document.querySelector("#logoImage").style.top = '177px';
                     document.querySelector("#logoImage").style.left = '35px';
                     document.querySelector("#logoImage").style.height = '65px';
