--- a/H/Hilton/Hilton_New_2020_Template/ads/300x250/300x250.html
+++ b/H/Hilton/Hilton_New_2020_Template/ads/300x250/300x250.html
@@ -401,9 +401,10 @@
                     document.querySelector("#logoImage").style.height = '94px';
                     document.querySelector("#logoImage").style.top = '163px';
 
-                    document.querySelector("#ad").style.fontFamily = "RuiAbreuUsual";
-                    document.querySelector("#cta").style.fontFamily = "TypeTogetherBreeSerifSb";
-                    whitePatchColor = '#55565a';
+                    // document.querySelector("#ad").style.fontFamily = "RuiAbreuUsual";
+                    // document.querySelector("#cta").style.fontFamily = "TypeTogetherBreeSerifSb";
+                    document.querySelector("#ad").style.fontFamily = "LoewBold";
+                    whitePatchColor = '#FFF';
                   }else if(hamptonCodes.indexOf(matchingCodes[matchIndex]) != -1){
                     logoImageName = 'hampton';
                     document.querySelector("#logoImage").style.height = '93px';
