--- a/H/Hilton/Hilton_New_2020_Template/ads/300x600/300x600.html
+++ b/H/Hilton/Hilton_New_2020_Template/ads/300x600/300x600.html
@@ -386,9 +386,10 @@
                     logoImageName = 'hgi';
                     document.querySelector("#logoImage").style.top = '406px';
 
-                    document.querySelector("#ad").style.fontFamily = "RuiAbreuUsual";
-                    document.querySelector("#cta").style.fontFamily = "TypeTogetherBreeSerifSb";
-                    whitePatchColor = '#55565a';
+                    // document.querySelector("#ad").style.fontFamily = "RuiAbreuUsual";
+                    // document.querySelector("#cta").style.fontFamily = "TypeTogetherBreeSerifSb";
+                    document.querySelector("#ad").style.fontFamily = "LoewBlack";
+                    // whitePatchColor = '#55565a';
                   }else if(hamptonCodes.indexOf(matchingCodes[matchIndex]) != -1){
                     logoImageName = 'hampton';
                     document.querySelector("#logoImage").style.top = '389px';
