Fixed logo position

--- a/H/Hilton/Hilton_New_2020_Template/ads/300x250/300x250.html
+++ b/H/Hilton/Hilton_New_2020_Template/ads/300x250/300x250.html
@@ -400,6 +400,7 @@
                     logoImageName = 'hgi';
                     document.querySelector("#logoImage").style.height = '94px';
                     document.querySelector("#logoImage").style.top = '163px';
+                    document.querySelector("#logoImage").style.left = '22px';
 
                     // document.querySelector("#ad").style.fontFamily = "RuiAbreuUsual";
                     // document.querySelector("#cta").style.fontFamily = "TypeTogetherBreeSerifSb";
