--- a/H/Hilton/Hilton_New_2020_Template/ads/300x250/300x250.html
+++ b/H/Hilton/Hilton_New_2020_Template/ads/300x250/300x250.html
@@ -480,6 +480,7 @@
                     logoImageName = 'hgv';
                     document.querySelector("#logoImage").style.height = '91px';
                     document.querySelector("#logoImage").style.top = '164px';
+                    document.querySelector("#logoImage").style.left = '20px';
                   }
                 }
               }
